--- a/com.lunarclient.LunarClient.yml
+++ b/com.lunarclient.LunarClient.yml
@@ -11,6 +11,7 @@ finish-args:
   - --persist=.minecraft
   - --persist=.lunarclient
   - --share=network
+  - --share=ipc
   - --device=dri
   - --socket=x11
   - --socket=wayland
